--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: my-actions
-        uses: ./
+        uses: ./action/
       - name: Successful
         run: echo "My actions works"
